Add Network level API actions
