# src/cadence13/api/openapi/showtime.yaml
@@ -288,6 +288,12 @@ paths:
       tags:
         - networks
       responses:
+        200:
+          description: Create Successful, returns detailed information for the network created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Network'
         default:
           description: unexpected error
           content:
@@ -521,6 +527,36 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /podcasts/{podcastId}/network:
+    patch:
+      summary: Change podcast's network
+      operationId: podcast.update_podcast_network
+      tags:
+        - podcasts
+      parameters:
+        - name: podcastId
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/UUID'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Podcast'
+      responses:
+        200:
+          description: Return the updated podcast
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Podcast'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /podcasts/{podcastId}/episodes:
     get:
